--- a/react-project/package.json
+++ b/react-project/package.json
@@ -9,6 +9,7 @@
     "popper.js": "^1.14.3",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
+    "react-day-picker": "^7.1.6",
     "react-dom": "^16.3.1",
     "react-scripts": "1.1.4",
     "reactstrap": "^5.0.0-beta.3"
