--- a/react-project/package.json
+++ b/react-project/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "ajv": "^6.4.0",
     "bootstrap": "^4.1.0",
+    "date-fns": "^1.29.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "react": "^16.3.1",
