--- a/react-project/package.json
+++ b/react-project/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.4.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.0",
     "date-fns": "^1.29.0",
     "jquery": "^3.3.1",
+    "material-ui": "^0.20.0",
     "popper.js": "^1.14.3",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-time-picker": "^1.0.3",
     "react-day-picker": "^7.1.6",
     "react-dom": "^16.3.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-simple-popover": "^0.2.4",
+    "react-tap-event-plugin": "^3.0.2",
     "reactstrap": "^5.0.0-beta.3"
   },
   "scripts": {
