Added login css and created users. Need to be fixed because an empty object is saved in the state

--- a/react-project/package.json
+++ b/react-project/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "1.1.4",
     "react-simple-popover": "^0.2.4",
     "react-tap-event-plugin": "^3.0.2",
-    "reactstrap": "^5.0.0-beta.3"
+    "reactstrap": "^5.0.0-beta.3",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
