--- a/react-project/package.json
+++ b/react-project/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.0",
     "date-fns": "^1.29.0",
+    "intro.js": "^2.9.3",
     "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
     "popper.js": "^1.14.3",
