Currently working with joyride for interactive tutorial

--- a/react-project/package.json
+++ b/react-project/package.json
@@ -7,7 +7,6 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.0",
     "date-fns": "^1.29.0",
-    "intro.js": "^2.9.3",
     "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
     "popper.js": "^1.14.3",
@@ -16,6 +15,7 @@
     "react-bootstrap-time-picker": "^1.0.3",
     "react-day-picker": "^7.1.6",
     "react-dom": "^16.3.1",
+    "react-joyride": "^2.0.0-10",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
