--- a/react-project/package.json
+++ b/react-project/package.json
@@ -16,6 +16,7 @@
     "react-day-picker": "^7.1.6",
     "react-dom": "^16.3.1",
     "react-joyride": "^2.0.0-10",
+    "react-responsive": "^4.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
