--- a/react-project/package.json
+++ b/react-project/package.json
@@ -33,7 +33,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "json-loader": "^0.5.7"
+  },
   "author": "",
   "license": "ISC"
 }
