--- a/react-project/package.json
+++ b/react-project/package.json
@@ -10,20 +10,23 @@
     "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
     "popper.js": "^1.14.3",
-    "react": "^16.3.1",
+    "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-time-picker": "^1.0.3",
     "react-day-picker": "^7.1.6",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.4.0",
     "react-joyride": "^2.0.0-10",
     "react-responsive": "^4.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-simple-popover": "^0.2.4",
+    "react-sound": "^1.2.0",
     "react-tap-event-plugin": "^3.0.2",
     "reactstrap": "^5.0.0-beta.3",
-    "uuid": "^3.2.1"
+    "redux": "^4.0.0",
+    "uuid": "^3.2.1",
+    "video-react": "^0.10.9"
   },
   "scripts": {
     "start": "react-scripts start",
